FORMS are a pain
Finished up the login form
Started the hope form, I'm in PAIN help

--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,3 +1,25 @@
+.vars{
+	--Color1: #fa5dff;
+	// --Color1-hover: #bc63c0;
+	// --Color1-active: #e395e5;
+	// --Color1-focus: #e395e5;
+
+	--Color2: #7e31a1;
+	// --Color2-hover: #9545ba;
+	// --Color2-active: #8856a0;
+	// --Color2-focus: #8856a0;
+	
+	--Color3: #165591;
+	// --Color3-hover: #347abb;
+	// --Color3-active: #5387b8;
+	// --Color3-focus: #5387b8;
+	
+	--Color4: #198a55;
+	// --Color4-hover: #15b66a;
+	// --Color4-active: #6aecaf;
+	// --Color4-focus: #6aecaf;
+}
+
 .centro{
 	justify-self: center;
 	display: 	flex;
