--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,10 +1,25 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Home
     </ion-title>
   </ion-toolbar>
 </ion-header>
+<!-- Solo queremos la fecha no la hora -->
+<ion-modal [keepContentsMounted]="true">
+	<ng-template>
+		<ion-datetime
+			id="datetime"
+			presentation="date"
+		></ion-datetime>
+	</ng-template>
+</ion-modal>
+<ion-picker
+	[isOpen]="isOpen"
+	[columns]="Options"
+	[buttons]="buTONS"
+	(didDismiss)="setOpen(false)"
+></ion-picker>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
@@ -12,9 +27,32 @@
       <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+	<br><br><br>
+	<div id="container">
+		<ion-list>
+			<ion-item> <!-- nombre -->
+				<ion-input
+					label="Nombre:"
+					labelPlacement="floating"
+					name="name">
+				</ion-input>
+			</ion-item>
+			<ion-item> <!-- apellido -->
+				<ion-input
+					label="Apellido:"
+					labelPlacement="floating"
+					name="apell">
+				</ion-input>
+			</ion-item>
+			<ion-item class="row"><!-- lvl Educ -->
+				<div class="col">
+					<ion-button (click)="setOpen(true)">Nivel de Educacion</ion-button>
+				</div>
+				<div class="col centro">{{SelOpt}}</div>
+			</ion-item>
+			<ion-item> <!-- Cumpleaños Uwu -->
+				<ion-datetime-button datetime="datetime"></ion-datetime-button>
+			</ion-item>
+		</ion-list>
+	</div>
 </ion-content>
