--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -2,26 +2,35 @@
   text-align: center;
 
   position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  left: 10%;
+  right: 10%;
+  top: 20%;
+  transform: translateY(-20%);
+}
+.centro{
+	margin-left: 10%;
+	margin-right: 10%;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.uwu{
+	margin-left: 20%;
+	margin-right: 20%;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
+// #container strong {
+//   font-size: 20px;
+//   line-height: 26px;
+// }
 
-  color: #8c8c8c;
+// #container p {
+//   font-size: 16px;
+//   line-height: 22px;
 
-  margin: 0;
-}
+//   color: #8c8c8c;
 
-#container a {
-  text-decoration: none;
-}
+//   margin: 0;
+// }
+
+// #container a {
+//   text-decoration: none;
+// }
