--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -11,7 +11,7 @@
     </ion-toolbar>
   </ion-header>
 	<ion-list>
-
+		<br><br>
 		<ion-list class="uwu">
 			<ion-item>
 				<ion-label position="floating">Username:</ion-label>
@@ -21,7 +21,8 @@
 					maxlength="8" minlenght="3"
 					[value]="UserModel"
 					(ionInput)="onUserInput($event)"
-					#ionInputEl></ion-input>
+					#ionInputEl>
+				</ion-input>
 			</ion-item>
 			<ion-item>
 				<ion-label position="floating">Password:</ion-label>
@@ -34,7 +35,7 @@
 					#ionInputAl></ion-input>
 			</ion-item>
 		</ion-list>
-
+		<br><br>
 		<ion-button color="success" class="centro" [routerLink]="['/home']">
 			Ingresar
 		</ion-button>
