IT GOT PERSONAL
Got Animations working so I can rub it on the profs FACE 'cause is not that hard lul

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -54,5 +54,6 @@
 				<ion-datetime-button datetime="datetime"></ion-datetime-button>
 			</ion-item>
 		</ion-list>
+		<ion-button [routerLink]="['/anim']">Anims</ion-button>
 	</div>
 </ion-content>
