--- a/src/app/anim/anim.page.html
+++ b/src/app/anim/anim.page.html
@@ -15,5 +15,6 @@
 	El #square es el que es buscado por el @ViewChild -->
 	<div #square id="square"></div>
 	<ion-button (click)="play()">Play</ion-button>
+	<ion-button (click)="pause()">Pause</ion-button>
 	<ion-button (click)="stop()">Stop</ion-button>
 </ion-content>
