--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,5 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+	<ion-icon slot="start" name="person"></ion-icon>
+
     <ion-title>login</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -37,6 +39,7 @@
 		</ion-list>
 		<br><br>
 		<ion-button color="success" class="centro" [routerLink]="['/home']">
+			<ion-icon slot="start" name="person"></ion-icon>
 			Ingresar
 		</ion-button>
 	</ion-list>
